--- a/CityExperWeb/Assets/css/Layout.css
+++ b/CityExperWeb/Assets/css/Layout.css
@@ -317,10 +317,9 @@ input:checked + .slider:before {
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-    /*background-color: #247176;*/
+/*.active, .accordion:hover {
     background-image: linear-gradient(to right,#2f8c8b,#0d394a);
-}
+}*/
 
 /* Style the accordion panel. Note: hidden by default */
 .panel1 {
