--- a/CityExperWeb/Views/Shared/_Header.cshtml
+++ b/CityExperWeb/Views/Shared/_Header.cshtml
@@ -15,9 +15,9 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav" style="margin:0;">
                 <div id="verticle" style=" width: 1px;height: 45px;background-color: #a99975;"></div>
-                <a class="nav-item nav-link" href="/anasayfa"><i class="fa fa-home" aria-hidden="true"></i>Anasayfa</a>
-                <a class="nav-link" href="@Url.Action("Index","SatilikTasinmaz")"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Satılık Ekle</a>
-                <a class="nav-link" href="@Url.Action("Raporlama","SatilikTasinmaz")"><span class="glyphicon glyphicon-dashboard" style="margin-right:2px;"></span>Raporlama</a>
+                <a class="nav-item nav-link" href="@Url.Action("Raporlama","SatilikTasinmaz")"><i class="fa fa-home" aria-hidden="true"></i>Anasayfa</a>
+                @*<a class="nav-link" href="@Url.Action("Index","SatilikTasinmaz")"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Satılık Ekle</a>*@
+              @*  <a class="nav-link" href="@Url.Action("Raporlama","SatilikTasinmaz")"><span class="glyphicon glyphicon-dashboard" style="margin-right:2px;"></span>Raporlama</a>*@
             </div>
             @*<div class="navbar-nav ml-auto" style="float:right;">
                 <div id="verticle" style=" width: 1px;height: 45px;background-color: #a99975;"></div>
