--- a/CityExperWeb/Views/Yonetim/Tasinmaz.cshtml
+++ b/CityExperWeb/Views/Yonetim/Tasinmaz.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CityExperWeb.Models.Gayrimenkul.GayrimenkulViewModel
 @{
     ViewBag.Title = "Tasinmaz";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSite.cshtml";
 }
 <link href="~/Assets/css/tasinmazEklemeSayfasi.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<div class="container">
+<div class="right_col" role="main">
     <ul class="nav nav-tabs wizard">
         <li style="pointer-events:none" id="mainstep1" class="active">
             <a href="#" data-toggle="tab" aria-expanded="false">
