--- a/CityExperWeb/Assets/css/tasinmazEklemeSayfasi.css
+++ b/CityExperWeb/Assets/css/tasinmazEklemeSayfasi.css
@@ -375,10 +375,9 @@ input:focus, select:focus, textarea:focus, button:focus {
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-    /*background-color: #247176;*/
+/*.active, .accordion:hover {
     background-image: linear-gradient(to right,#2f8c8b,#0d394a);
-}
+}*/
 
 /* Style the accordion panel. Note: hidden by default */
 .panel1 {
@@ -557,9 +556,9 @@ input:focus, select:focus, textarea:focus, button:focus {
     margin-top: -10px;
 }
 
-.active {
+/*.active {
     background: #247176;
-}
+}*/
 /* not important */
 
 
