--- a/CityExperWeb/Views/Shared/_Layout.cshtml
+++ b/CityExperWeb/Views/Shared/_Layout.cshtml
@@ -15,101 +15,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
-    <style>
-        /*----------------------------------------------------------------------------- ANA STEP CSS -----------------------------------------------------------------------------*/
-        .container .nav-tabs.wizard li {
-            width: 33%;
-            height: 40px;
-            float: none;
-            margin-bottom: 3px;
-        }
-
-            .container .nav-tabs.wizard li > * {
-                position: relative;
-                color: #999999;
-                background-color: #dedede;
-                border-color: #dedede;
-            }
-
-            .container .nav-tabs.wizard li.completed > * {
-                color: #fff !important;
-                background-color: #1e646c !important;
-                border-color: #1e646c !important;
-                border-bottom: none !important;
-            }
-
-            .container .nav-tabs.wizard li.active > * {
-                color: #fff !important;
-                font-family: 'Roboto',serif;
-                font-size: 16px;
-                background-color: #1e646c !important;
-                border-color: #1e646c !important;
-                border-bottom: none !important;
-            }
-
-        .container .nav-tabs.wizard a:hover {
-            color: #fff;
-            background-color: #2c3f4c;
-            border-color: #2c3f4c
-        }
-
-        .container .nav-tabs.wizard > li > a,
-        .container .nav-tabs.wizard > li > a p {
-            opacity: 1;
-            color: black;
-            font-weight: 300 !important;
-            text-align: center;
-            height: 40px;
-            font-size: 16px;
-            font-family: 'Roboto', serif;
-        }
-
-        .container span.nmbr {
-            display: inline-block;
-            background: #ffffff;
-            width: 20px;
-            height: 20px;
-            margin: auto;
-            border-radius: 50%;
-            font-weight: bold;
-            font-size: 16px;
-            color: #555;
-            text-align: center;
-        }
-
-
-        .container .nav-tabs.wizard li {
-            position: relative;
-            padding: 0;
-            margin: 4px 0px 4px 0;
-            width: 33.3%;
-            float: left;
-            text-align: center;
-        }
-
-        .container .nav-tabs.wizard > li:nth-of-type(1) > a {
-            border-bottom-right-radius: 8px;
-            border-top-right-radius: 8px;
-        }
-
-        .container .nav-tabs.wizard li:last-child a {
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
-        }
-
-        .container .nav-tabs.wizard li:last-child {
-            margin-right: 0;
-        }
-
-        @@media (max-width: 420px) {
-            .container ul li p b {
-                display: none;
-            }
-        }
-    </style>
+    <link href="~/Assets/dashboard/custom2.min.css" rel="stylesheet" />
+   
 </head>
 <body class="full-width" style="background-color:#f9f3f3;">
-
     @Html.Partial("_Header")
     <div class="row">
         @RenderBody()
@@ -139,7 +48,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="~/Assets/js/printThis/printThis.js"></script>
-
+<script src="~/Assets/dashboard/build/js/custom.min.js"></script>
 
 @RenderSection("Scripts", required: false)
 <script>
@@ -173,16 +82,6 @@
     $(document).ready(function () {
         $('[data-toggle="tooltip"]').tooltip();
     });
-
-    $('.accordion').on('click', function () {
-        $('.fa-chevron-down').removeClass('fa-chevron-down');
-        $('.fa').addClass('fa-chevron-up');
-    });
-    $('.active').on('click', function () {
-        $('.fa-chevron-up').removeClass('fa-chevron-up');
-        $('.fa').addClass('fa-chevron-down');
-    });
-
     $('.navbar-toggler').on('click', function () {
         $('.collapse:not(.show)').css('display', 'block');
     });
@@ -214,71 +113,6 @@
         $('#oneCikanFormu').attr('class', resultOneCikanListe);
     });
 
-
-    //------------------------------------------------------------------------Taşınmaz Eklemede açılır kapanır alan---------------------------------------------------------------------------
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-
-    for (i = 0; i < acc.length; i++) {
-        acc[i].addEventListener("click", function () {
-            this.classList.toggle("active");
-            var panel1 = this.nextElementSibling;
-            if (panel1.style.display === "block") {
-                panel1.style.display = "none";
-            } else {
-                panel1.style.display = "block";
-            }
-        });
-    }
-    $('document').ready(function () {
-        var count = 0;
-        $('.step').each(function () {
-            count++;
-
-        });
-
-        var i = 0;
-        //ileri
-        $('#nextTapu').on('click', function () {
-            if (count > i + 1) {
-                i++;
-                $('.active').removeClass('active');
-                $('.step').eq(i).addClass('active');
-                $('#mainstep1').addClass('active');
-
-            }
-        });
-        $('#nextBelediye').on('click', function () {
-            if (count > i + 1) {
-                i++;
-                $('.active').removeClass('active');
-                $('.step').eq(i).addClass('active');
-                $('#mainstep1').addClass('active');
-            }
-        });
-        $('#nextParselOnay').on('click', function () {
-            $('#mainstep2').addClass('active');
-            $('#mainstep1').removeClass('active');
-        });
-
-        $('#nextBina').on('click', function () {
-            $('#mainstep3').addClass('active');
-            $('#mainstep2').removeClass('active');
-        });
-        //geri
-        $('#prevBina').on('click', function () {
-            $('#mainstep2').removeClass('active');
-            $('#mainstep1').addClass('active');
-        });
-        $('#nextBagimsiz').on('click', function () {
-            //
-        });
-        //geri
-        $('#prevBagimsiz').on('click', function () {
-            $('#mainstep3').removeClass('active');
-            $('#mainstep2').addClass('active');
-        });
-    });
 
     //---------------------------------------------------------------------------------------------------------FORM GEÇİŞ JS-------------------------------------------------------------------------------------------
     $('#nextTapu').on('click', function () {
